# bazel-examples

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .clang-tidy  .clippy.toml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .ruby-version  .shellcheckrc  BUILD.bazel  CONTRIBUTING.md  Gemfile  MODULE.aspect  MODULE.bazel  Package.resolved  Package.swift  README.bazel.md  README.md  REPO.bazel  TODO.md  WORKSPACE.bazel  _config.yml  buf.gen.yaml  buf.yaml  checkstyle.xml  deliverable.sh  eslint.config.mjs  flake.sh  gazelle_python.yaml  go.mod  go.sum  maven_install.json  package.json  pmd.xml  pnpm-lock.yaml  (+6 more)
angular/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  angular.json  defs.bzl  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml  test.sh  tsconfig.json
angular-ngc/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  defs.bzl  karma.bzl  karma.conf.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.node.json
angular-ngc/.aspect/bazelrc/: BUILD.bazel
angular-ngc/.aspect/cli/: config.yaml  postcss.star
angular-ngc/applications/demo/: BUILD.bazel  index.html  package.json
angular-ngc/applications/demo/app/: app.component.html  (+3 more)
angular-ngc/applications/grpc/: BUILD.bazel  README.md  main.ts
angular-ngc/libraries/common/: BUILD.bazel
angular-ngc/libraries/lib-a/: BUILD.bazel
angular-ngc/tools/: BUILD.bazel  karma.bzl  karma.conf.js  ng.bzl  ngc.esbuild.ts  sass.bzl  sass_workaround.bzl  test-bootstrap.js  test-setup.ts  util.bzl
angular/.aspect/bazelrc/: BUILD.bazel
angular/projects/common/: BUILD.bazel  karma.conf.js  package.json
angular/projects/lib-a/: BUILD.bazel  karma.conf.js  ng-package.json  package.json
angular/projects/my-app/: BUILD.bazel  tsconfig.spec.json
angular/projects/my-lib/: BUILD.bazel  README.md  package.json
angular/src/: index.html
angular/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
bufbuild/: BUILD.bazel  WORKSPACE  WORKSPACE.bazel  buf.bzl  repositories.bzl  toolchain.bzl
bufbuild/app/: BUILD.bazel  main.go
bufbuild/app/pb/: BUILD.bazel  buf.gen.yaml  help.proto
bzlmod/: .bazelrc  .bazelversion  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml
bzlmod/.aspect/bazelrc/: BUILD.bazel  bazel6.bazelrc  convenience.bazelrc  correctness.bazelrc  debug.bazelrc  performance.bazelrc
bzlmod/node/: BUILD
bzlmod/src/: BUILD.bazel  test.ts
bzlmod/swc/: BUILD  expected.js  in.ts
directory_path/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml
directory_path/.aspect/bazelrc/: BUILD.bazel
expand_template/: .bazelrc  BUILD.bazel  MODULE.bazel  package.json  workspace_status.sh
expand_template/.aspect/bazelrc/: ci.bazelrc  common.bazelrc  common6.bazelrc  javascript.bazelrc
go_workspaces/: .bazelrc  .bazelversion  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  go.work
go_workspaces/.aspect/bazelrc/: BUILD.bazel  common5.bazelrc
go_workspaces/bazel/: com_github_pebbe_zmq4.patch
go_workspaces/module1/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go  sunrise_test.go
go_workspaces/module2/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go
integration_testing/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  go.mod  go.sum  maven_install.json  package.json  pnpm-lock.yaml  requirements.in  requirements.txt
integration_testing/schema/: BUILD.bazel  logger.proto
integration_testing/test/: BUILD.bazel  service_test.py
java/: BUILD.bazel  Calculator.java  CalculatorTest.java
java-soap/: BUILD.bazel  MODULE.bazel  README.md  employeeservicetopdown.wsdl  maven_install.json
jest/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
jest/src/: BUILD.bazel  CheckboxWithLabel.spec.tsx  CheckboxWithLabel.tsx  a.spec.ts  a.ts
nestjs-monorepo/: .bazelignore  .bazelrc  .gitignore  .swcrc  BUILD.bazel  README.md  WORKSPACE  nest-cli.json  package.json  pnpm-lock.yaml  tsconfig.json
nestjs-monorepo/.aspect/bazelrc/: correctness.bazelrc  performance.bazelrc
nestjs-monorepo/.github/workflows/: ci.bazelrc  ci.yaml
nestjs-monorepo/apps/api/: BUILD.bazel  tsconfig.app.json
nestjs-monorepo/apps/scheduler/: tsconfig.app.json
nestjs-monorepo/libs/auth/: BUILD.bazel  package.json  tsconfig.lib.json  tsconfig.test.json
nestjs-monorepo/libs/user/: tsconfig.lib.json
next-app/: BUILD.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml
next.js/: .bazelignore  .bazelrc  .bazelversion  .gitignore  .pnpmfile.cjs  .swcrc  BUILD.bazel  README.md  WORKSPACE.bazel  next_entry.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.bzl  tsconfig.json
next.js/app/: BUILD.bazel  package.json
next.js/app/pages/: BUILD.bazel
next.js/apps/alpha/: BUILD.bazel  jest.config.js  package.json
next.js/bazel/: BUILD.bazel  next.bzl  next_entry.js
next.js/components/: BUILD.bazel  post-body.tsx
next.js/lib/: BUILD.bazel
next.js/pages/: BUILD.bazel
next.js/pages/api/: BUILD.bazel
next.js/patches/: decode-named-character-reference@1.0.1.patch  stringify-entities@4.0.2.patch
next.js/public/: BUILD.bazel
next.js/styles/: BUILD.bazel
next.js/types/: BUILD.bazel
node_snapshot_flags/: BUILD.bazel  MODULE.bazel  README.md  index.js  snapshot.js
node_test_coverage/: BUILD.bazel  README.md  index.mjs  test.mjs
npm_packages/: BUILD.bazel  tsconfig.json
npm_packages/first/: package.json
npm_packages/napi/: BUILD  Cargo.toml  README.md  package.json
npm_packages/napi/src/: BUILD  adder.c  adder.h  adder_binding.c  index.ts  lib.rs
npm_packages/one/: BUILD.bazel  package.json
npm_packages/shared/: BUILD.bazel  package.json
npm_packages/shared/src/: lib.ts
npm_packages/two/: BUILD.bazel  package.json
npm_packages/two/src/: lib.js
oci_go_image/: .bazelrc  BUILD.bazel  MODULE.bazel  main.go  main_test.go
(+686 files in other folders)
