load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//:__subpackages__"])

# Repo-wide gazelle config. The `gazelle` binary + runner targets live in
# //tools/gazelle (the default target for `aspect gazelle`); these directives
# are read from the root package and apply across the monorepo.
# gazelle:prefix github.com/aspect-build/bazel-examples
# gazelle:js_npm_package_target_name pkg
# gazelle:js_package_rule_kind js_library
# gazelle:js_project_naming_convention tsc

# TODO(alex): refactor these folders to follow gazelle conventions
# gazelle:exclude py_mypy
# gazelle:exclude angular
# gazelle:exclude qwik

npm_link_all_packages(name = "node_modules")

exports_files(
    [
        ".clang-tidy",
        ".clippy.toml",
        ".ruff.toml",
        ".shellcheckrc",
        "buf.yaml",
        "checkstyle.xml",
        "gazelle_python.yaml",
        "Gemfile",
        "Gemfile.lock",
        "pmd.xml",
        "pyproject.toml",
    ],
)

js_library(
    name = "eslintrc",
    srcs = ["eslint.config.mjs"],
    deps = [
        ":node_modules/@eslint/js",
        ":node_modules/typescript-eslint",
    ],
)
