[project]
name = "aspect_bazel_examples"
classifiers = ["Private :: Do Not Upload"]
version = "0.0.0-PLACEHOLDER"

# An example unpinned dependency.
# Note that pip-compile will ensure the resolved versions of
# direct and indirect dependencies are pinned.
# Therefore we only need to constrain versions when some ranges 
# of dependency versions are not compatible.
dependencies = ["cowsay"]

# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]
